--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.8",
     "browserify": "^17.0.0",
     "destyle.css": "^2.0.2",
+    "emailjs-com": "^3.2.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-livereload": "^4.0.2",
