--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,21 @@
 {
-  "name": "Hakim Nemar",
   "short_name": "HN",
+  "name": "Hakim Nemar",
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "logo.svg",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
     },
     {
-      "src": "/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "logo.svg",
+      "type": "image/svg",
+      "sizes": "187x187"
+    },
+    {
+      "src": "logo.svg",
+      "type": "image/svg",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
